# personaltools

./: .gitignore  README.md  pyproject.toml
src/personaltools/: __init__.py  figsizes.py  pltstyles.py  qr_generator.py
src/personaltools/matplotlib_styles/: README.md  ieee.mplstyle
